fix: dialog footer gombok egymás mellett - flex-wrap: wrap eltávolítva

--- a/src/app/features/partner/components/teacher-link-dialog/teacher-link-dialog.component.scss
+++ b/src/app/features/partner/components/teacher-link-dialog/teacher-link-dialog.component.scss
@@ -254,11 +254,6 @@
   }
 }
 
-:host ::ng-deep .dw__footer {
-  flex-wrap: nowrap !important;
-  flex-direction: row !important;
-}
-
 .footer-spacer {
   flex: 1;
 }
