--- a/src/app/shared/components/dialog-wrapper/dialog-wrapper.component.scss
+++ b/src/app/shared/components/dialog-wrapper/dialog-wrapper.component.scss
@@ -523,7 +523,6 @@ $gray-900: get-color('gray', 900);
   }
 
   .dw__footer {
-    flex-wrap: wrap;
     justify-content: center;
     padding: 0.75rem 1.25rem;
   }
